# books_rest_api-rust_axum

./: .gitignore  Cargo.toml
src/: db_repository.rs  error.rs  json_validation.rs  main.rs
src/handler/: authors.rs  books.rs  mod.rs  publishers.rs
src/handlers/: books.rs  mod.rs
src/model/: author_model.rs  book_model.rs  mod.rs  publisher_model.rs
src/repository/: author_repository.rs  book_repository.rs  mod.rs  publisher_repository.rs
src/service/: author_service.rs  book_service.rs  mod.rs  publisher_service.rs
