[package]
name = "web_server_test"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8"}
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.6", features = ["trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
serde_json = {version = "1.0"}
serde = {version = "1", features = ["derive"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15"
thiserror = '2.0.18'
validator = {version = "0.20.0", features = ["derive"]}